force-app/main/default/objects/Letter__c/Letter__c.object-meta.xml
<CustomObject>
    <description>Each letter record contains the text of a letter to be either emailed or printed and sent.  Letters are used in cases where the individual pieces of correspondence need to be tracked in SalesForce.</description>
    <label>Letter</label>
    <nameField>
        <displayFormat>LET-{0000000}</displayFormat>
        <label>Letter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Letters</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>