force-app/main/default/objects/Letter__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account associated with this letter</description>
    <inlineHelpText>The account associated with this letter</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Letters</relationshipLabel>
    <relationshipName>Letters</relationshipName>
    <type>Lookup</type>
</CustomField>