force-app/main/default/objects/Letter__c/fields/Account_owner__c.field-meta.xml
<CustomField>
    <fullName>Account_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cached lookup relationship to the account owner. Necessary because can&apos;t reach through the polymorphic Account.Owner link.</description>
    <inlineHelpText>Cached lookup relationship to the account owner. Necessary because can&apos;t reach through the polymorphic Account.Owner link.</inlineHelpText>
    <label>Account owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Letters</relationshipName>
    <type>Lookup</type>
</CustomField>