force-app/main/default/objects/Letter__c/fields/Account_owner_name__c.field-meta.xml
<CustomField>
    <fullName>Account_owner_name__c</fullName>
    <description>The name of the letter&apos;s account owner</description>
    <formula>IF(NOT(ISBLANK(Account__c)), Account__r.Owner.FirstName &amp; &quot; &quot; &amp; Account__r.Owner.LastName, null)</formula>
    <inlineHelpText>The name of the letter&apos;s account owner</inlineHelpText>
    <label>Account owner name</label>
    <type>Text</type>
</CustomField>