force-app/main/default/objects/Letter__c/fields/Advisor__c.field-meta.xml
<CustomField>
    <fullName>Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Advisor to which this letter is linked</description>
    <inlineHelpText>Advisor to which this letter is linked</inlineHelpText>
    <label>Advisor</label>
    <referenceTo>Advisor__c</referenceTo>
    <relationshipLabel>Letters</relationshipLabel>
    <relationshipName>Letters</relationshipName>
    <type>Lookup</type>
</CustomField>