force-app/main/default/objects/Letter__c/fields/Advisor_Payment__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The advisor payment linked to this letter</description>
    <inlineHelpText>The advisor payment linked to this letter</inlineHelpText>
    <label>Advisor Payment</label>
    <referenceTo>Advisor_Payment__c</referenceTo>
    <relationshipLabel>Letters</relationshipLabel>
    <relationshipName>Letters</relationshipName>
    <type>Lookup</type>
</CustomField>