force-app/main/default/objects/Letter__c/fields/Advisor_Term__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Advisor term to which this letter is linked</description>
    <inlineHelpText>Advisor term to which this letter is linked</inlineHelpText>
    <label>Advisor Term</label>
    <referenceTo>Advisor_Term__c</referenceTo>
    <relationshipLabel>Letters</relationshipLabel>
    <relationshipName>Letters</relationshipName>
    <type>Lookup</type>
</CustomField>