force-app/main/default/objects/Letter__c/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The assessment linked to this letter</description>
    <inlineHelpText>The assessment linked to this letter</inlineHelpText>
    <label>Assessment</label>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipLabel>Letters</relationshipLabel>
    <relationshipName>Letters</relationshipName>
    <type>Lookup</type>
</CustomField>