force-app/main/default/objects/Letter__c/fields/Custom_Reqs__c.field-meta.xml
<CustomField>
    <fullName>Custom_Reqs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The custom reqs (if any) linked to the proposal/grant behind this letter</description>
    <inlineHelpText>The custom reqs (if any) linked to the proposal/grant behind this letter</inlineHelpText>
    <label>Custom Reqs</label>
    <referenceTo>Custom_Reqs__c</referenceTo>
    <relationshipLabel>Letters</relationshipLabel>
    <relationshipName>Letters</relationshipName>
    <type>Lookup</type>
</CustomField>