force-app/main/default/objects/Letter__c/fields/Date_emailed__c.field-meta.xml
<CustomField>
    <fullName>Date_emailed__c</fullName>
    <description>Date on which this letter was emailed</description>
    <inlineHelpText>Date on which this letter was emailed</inlineHelpText>
    <label>Date emailed</label>
    <type>Date</type>
</CustomField>