force-app/main/default/objects/Letter__c/fields/Date_of_deadline__c.field-meta.xml
<CustomField>
    <fullName>Date_of_deadline__c</fullName>
    <description>Date by which response is expected</description>
    <inlineHelpText>Date by which response is expected</inlineHelpText>
    <label>Date of deadline</label>
    <type>Date</type>
</CustomField>