force-app/main/default/objects/Letter__c/fields/Date_posted__c.field-meta.xml
<CustomField>
    <fullName>Date_posted__c</fullName>
    <description>Date on which this letter was posted to the online apps site</description>
    <inlineHelpText>Date on which this letter was posted to the online apps site</inlineHelpText>
    <label>Date posted</label>
    <type>Date</type>
</CustomField>