force-app/main/default/objects/Letter__c/fields/Date_printed__c.field-meta.xml
<CustomField>
    <fullName>Date_printed__c</fullName>
    <description>Date on which this letter was printed</description>
    <inlineHelpText>Date on which this letter was printed</inlineHelpText>
    <label>Date printed</label>
    <type>Date</type>
</CustomField>