force-app/main/default/objects/Letter__c/fields/Date_received__c.field-meta.xml
<CustomField>
    <fullName>Date_received__c</fullName>
    <description>Date on which this letter was received, for letters from the group</description>
    <inlineHelpText>Date on which this letter was received, for letters from the group</inlineHelpText>
    <label>Date received</label>
    <type>Date</type>
</CustomField>