force-app/main/default/objects/Letter__c/fields/Email_cc__c.field-meta.xml
<CustomField>
    <fullName>Email_cc__c</fullName>
    <description>If non-blank, then should be email address(s) to be cc&apos;ed when this letter is emailed</description>
    <inlineHelpText>If non-blank, then should be email address(s) to be cc&apos;ed when this letter is emailed</inlineHelpText>
    <label>Email cc</label>
    <type>TextArea</type>
</CustomField>