force-app/main/default/objects/Letter__c/fields/Email_footer__c.field-meta.xml
<CustomField>
    <fullName>Email_footer__c</fullName>
    <description>The email footer for this letter (set from the Email Footer template piece, if any).  Might include html signature.</description>
    <inlineHelpText>The email footer for this letter (set from the Email Footer template piece, if any).  Might include html signature.</inlineHelpText>
    <label>Email footer</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>