force-app/main/default/objects/Letter__c/fields/Email_override_from_account__c.field-meta.xml
<CustomField>
    <fullName>Email_override_from_account__c</fullName>
    <description>The GM Email Override field from the linked account.  If non-blank, then the letter will be sent to that address(es) when emailed rather to than those in the Emails field.</description>
    <formula>IF(NOT(ISBLANK( Account__c)), Account__r.GM_email_override__c , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The GM Email Override field from the linked account.  If non-blank, then the letter will be sent to that address(es) when emailed rather to than those in the Emails field.</inlineHelpText>
    <label>Email override from account</label>
    <type>Text</type>
</CustomField>