force-app/main/default/objects/Letter__c/fields/Email_subject__c.field-meta.xml
<CustomField>
    <fullName>Email_subject__c</fullName>
    <description>The email subject for this letter (set from the Email Subject template piece, if any)</description>
    <inlineHelpText>The email subject for this letter (set from the Email Subject template piece, if any)</inlineHelpText>
    <label>Email subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>