force-app/main/default/objects/Letter__c/fields/Emailed_to__c.field-meta.xml
<CustomField>
    <fullName>Emailed_to__c</fullName>
    <description>The email address(es) to which this letter was sent the last time it was emailed</description>
    <inlineHelpText>The email address(es) to which this letter was sent the last time it was emailed</inlineHelpText>
    <label>Emailed to</label>
    <type>TextArea</type>
</CustomField>