force-app/main/default/objects/Letter__c/fields/Emails__c.field-meta.xml
<CustomField>
    <fullName>Emails__c</fullName>
    <description>Comma-separated email addresses for this letter, usually the emails of the account&apos;s contact records</description>
    <inlineHelpText>Comma-separated email addresses for this letter, usually the emails of the account&apos;s contact records</inlineHelpText>
    <label>Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>