force-app/main/default/objects/Letter__c/fields/GM_Data__c.field-meta.xml
<CustomField>
    <fullName>GM_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The GM Data record linked to this letter</description>
    <inlineHelpText>The GM Data record linked to this letter</inlineHelpText>
    <label>GM Data</label>
    <referenceTo>GM_Data__c</referenceTo>
    <relationshipLabel>Letters</relationshipLabel>
    <relationshipName>Letters</relationshipName>
    <type>Lookup</type>
</CustomField>