force-app/main/default/objects/Letter__c/fields/Invite__c.field-meta.xml
<CustomField>
    <fullName>Invite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Invite record linked to this letter</description>
    <inlineHelpText>The Invite record linked to this letter</inlineHelpText>
    <label>Invite</label>
    <referenceTo>Invite__c</referenceTo>
    <relationshipLabel>Letters</relationshipLabel>
    <relationshipName>Letters</relationshipName>
    <type>Lookup</type>
</CustomField>