force-app/main/default/objects/Letter__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Language in which this letter is written</description>
    <formula>IF (NOT(ISBLANK(TEXT( Account__r.Correspondence_language__c ))), 
  TEXT(Account__r.Correspondence_language__c),
IF (NOT(ISBLANK(TEXT( Profile__r.Language__c ))), 
  TEXT(Profile__r.Language__c),
&quot;English&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Language in which this letter is written</inlineHelpText>
    <label>Language</label>
    <type>Text</type>
</CustomField>