force-app/main/default/objects/Letter__c/fields/Letter_owner__c.field-meta.xml
<CustomField>
    <fullName>Letter_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cached lookup relationship to the letter owner. Necessary because can&apos;t reach through the polymorphic Letter.Owner link.</description>
    <inlineHelpText>Cached lookup relationship to the letter owner. Necessary because can&apos;t reach through the polymorphic Letter.Owner link.</inlineHelpText>
    <label>Letter owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Letters1</relationshipName>
    <type>Lookup</type>
</CustomField>