force-app/main/default/objects/Letter__c/fields/Notification_email_body__c.field-meta.xml
<CustomField>
    <fullName>Notification_email_body__c</fullName>
    <description>Body of notification email message sent to the group when &quot;posting&quot; a letter to the applicant&apos;s homepage on our online site.  NOTE: only applicable/sent for correspondence posted online</description>
    <inlineHelpText>Body of notification email message sent to the group when &quot;posting&quot; a letter to the applicant&apos;s homepage on our online site.  NOTE: only applicable/sent for correspondence posted online</inlineHelpText>
    <label>Notification email body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>