force-app/main/default/objects/Letter__c/fields/Notification_email_subject__c.field-meta.xml
<CustomField>
    <fullName>Notification_email_subject__c</fullName>
    <description>Subject of notification email message sent to the group when &quot;posting&quot; a letter to the applicant&apos;s homepage on our online site.  NOTE: only applicable/sent for correspondence posted online</description>
    <inlineHelpText>Subject of notification email message sent to the group when &quot;posting&quot; a letter to the applicant&apos;s homepage on our online site.  NOTE: only applicable/sent for correspondence posted online</inlineHelpText>
    <label>Notification email subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>