force-app/main/default/objects/Letter__c/fields/Page_1__c.field-meta.xml
<CustomField>
    <fullName>Page_1__c</fullName>
    <description>First page of letter, or the complete text if emailed</description>
    <inlineHelpText>First page of letter, or the complete text if emailed</inlineHelpText>
    <label>Page 1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>