force-app/main/default/objects/Letter__c/fields/Page_2__c.field-meta.xml
<CustomField>
    <fullName>Page_2__c</fullName>
    <description>Second page of letter</description>
    <inlineHelpText>Second page of letter</inlineHelpText>
    <label>Page 2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>