force-app/main/default/objects/Letter__c/fields/Page_3__c.field-meta.xml
<CustomField>
    <fullName>Page_3__c</fullName>
    <description>Third page of letter</description>
    <inlineHelpText>Third page of letter</inlineHelpText>
    <label>Page 3</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>