force-app/main/default/objects/Letter__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The payment method (if any) linked to this letter</description>
    <inlineHelpText>The payment method (if any) linked to this letter</inlineHelpText>
    <label>Payment Method</label>
    <referenceTo>Payment_Method__c</referenceTo>
    <relationshipLabel>Letters</relationshipLabel>
    <relationshipName>Letters</relationshipName>
    <type>Lookup</type>
</CustomField>