force-app/main/default/objects/Letter__c/fields/Postable__c.field-meta.xml
<CustomField>
    <fullName>Postable__c</fullName>
    <description>Checked if this letter&apos;s template is postable, that is, its letters may be posted to the online apps web site</description>
    <formula>Template__r.Postable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if this letter&apos;s template is postable, that is, its letters may be posted to the online apps web site</inlineHelpText>
    <label>Postable</label>
    <type>Checkbox</type>
</CustomField>