force-app/main/default/objects/Letter__c/fields/Prop_num_with_renewal__c.field-meta.xml
<CustomField>
    <fullName>Prop_num_with_renewal__c</fullName>
    <description>The Prop num with renewal field from linked proposal record</description>
    <formula>Proposal__r.Prop_num_with_renewal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Prop num with renewal field from linked proposal record</inlineHelpText>
    <label>Prop num with renewal</label>
    <type>Text</type>
</CustomField>