force-app/main/default/objects/Letter__c/fields/Signer_1_description__c.field-meta.xml
<CustomField>
    <fullName>Signer_1_description__c</fullName>
    <description>First name / Last name / Title / Email for the letter&apos;s first signer, if any</description>
    <inlineHelpText>First name / Last name / Title / Email for the letter&apos;s first signer, if any</inlineHelpText>
    <label>Signer 1 description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>