force-app/main/default/objects/Letter__c/fields/Signer_1_email__c.field-meta.xml
<CustomField>
    <fullName>Signer_1_email__c</fullName>
    <description>The email of the letter&apos;s first signer contact if any</description>
    <inlineHelpText>The email of the letter&apos;s first signer contact if any</inlineHelpText>
    <label>Signer 1 email</label>
    <type>Email</type>
</CustomField>