force-app/main/default/objects/Letter__c/fields/Signer_1_LastName__c.field-meta.xml
<CustomField>
    <fullName>Signer_1_LastName__c</fullName>
    <description>The last name of the letter&apos;s first signer contact if any</description>
    <inlineHelpText>The last name of the letter&apos;s first signer contact if any</inlineHelpText>
    <label>Signer 1 LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>