force-app/main/default/objects/Letter__c/fields/Signer_1_Title__c.field-meta.xml
<CustomField>
    <fullName>Signer_1_Title__c</fullName>
    <description>The title of the letter&apos;s first signer contact if any</description>
    <inlineHelpText>The title of the letter&apos;s first signer contact if any</inlineHelpText>
    <label>Signer 1 Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>