force-app/main/default/objects/Letter__c/fields/Signer_2_description__c.field-meta.xml
<CustomField>
    <fullName>Signer_2_description__c</fullName>
    <description>First name / Last name / Title / Email for the letter&apos;s second signer, if any</description>
    <inlineHelpText>First name / Last name / Title / Email for the letter&apos;s second signer, if any</inlineHelpText>
    <label>Signer 2 description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>