force-app/main/default/objects/Letter__c/fields/Signer_2_email__c.field-meta.xml
<CustomField>
    <fullName>Signer_2_email__c</fullName>
    <description>The email of the letter&apos;s second signer contact if any</description>
    <inlineHelpText>The email of the letter&apos;s second signer contact if any</inlineHelpText>
    <label>Signer 2 email</label>
    <type>Email</type>
</CustomField>