force-app/main/default/objects/Letter__c/fields/Signer_2_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Signer_2_FirstName__c</fullName>
    <description>The first name of the letter&apos;s second signer contact if any</description>
    <inlineHelpText>The first name of the letter&apos;s second signer contact if any</inlineHelpText>
    <label>Signer 2 FirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>