force-app/main/default/objects/Letter__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The template on which this letter is based</description>
    <inlineHelpText>The template on which this letter is based</inlineHelpText>
    <label>Template</label>
    <referenceTo>Template__c</referenceTo>
    <relationshipLabel>Letters</relationshipLabel>
    <relationshipName>Letters</relationshipName>
    <type>Lookup</type>
</CustomField>