force-app/main/default/objects/Letter__c/fields/Template_name__c.field-meta.xml
<CustomField>
    <fullName>Template_name__c</fullName>
    <description>Name of linked template</description>
    <formula>Template__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name of linked template</inlineHelpText>
    <label>Template name</label>
    <type>Text</type>
</CustomField>