force-app/main/default/objects/Letter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date_emailed__c</columns>
    <columns>Date_sent__c</columns>
    <columns>Template__c</columns>
    <columns>Template_name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Template__c</field>
        <operation>contains</operation>
        <value>closing</value>
    </filters>
    <label>All</label>
</ListView>